--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,7 @@
                 <ul class="nav_links">
                     <li><a href="D:/RE/index.html" >HOME</a></li>
                     <li><a href="#news" class="active">ABOUT US</a></li>
-                    <li><a href="#contact">SERVICES</a></li>
+                    <li><a href="services.html">SERVICES</a></li>
                     <li><a href="#about">SALON LOCATOR</a></li>
                     <li><a href="#about">GALLERY</a></li>
                     <li><a href="#about">BRIDAL</a></li>
