--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <ul class="nav_links">
                     <li><a href="#home" class="active">HOME</a></li>
                     <li><a href="D:\RE\aboutus.html">ABOUT US</a></li>
-                    <li><a href="#contact">SERVICES</a></li>
+                    <li><a href="services.html">SERVICES</a></li>
                     <li><a href="#about">SALON LOCATOR</a></li>
                     <li><a href="#about">GALLERY</a></li>
                     <li><a href="#about">BRIDAL</a></li>
