--- a/services.html
+++ b/services.html
@@ -26,8 +26,8 @@
                 <img src="http://www.mygreentrends.in/system/multiple_images/desktop_images/000/000/011/original/Services-Desktop.jpg?1437129365" style="width: 98%;">         
         </div>
         <div class="center">
-            <img src="http://www.mygreentrends.in/assets/Men-services-button-f7e71133152874b5488363095703b764.png" style="width:49%; cursor: pointer;">
-            <img src="http://www.mygreentrends.in/assets/Women-services-button-ef2e51bd481b2fe184bd1aa8819b28cb.png" style="width:49%; cursor: pointer;">  
+            <img src="http://www.mygreentrends.in/assets/Men-services-button-f7e71133152874b5488363095703b764.png" style="width:49%; cursor: pointer;" onclick="javascript:window.location='men_service.html';" >
+            <img src="http://www.mygreentrends.in/assets/Women-services-button-ef2e51bd481b2fe184bd1aa8819b28cb.png" style="width:49%; cursor: pointer;" onclick="javascript:window.location='women_service.html';">   
         </div>
         
         
